# chaturbate-downloader

./: .gitignore  README.md  app.py  pyproject.toml  setup.sh
downloader/: __init__.py  converter.py  extractor.py  hls.py  manager.py
static/: app.js  style.css
templates/: index.html
tests/: test_backend.py
